--- a/GlassRubbingApp.v1/Base.lproj/Main.storyboard
+++ b/GlassRubbingApp.v1/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6154.21" systemVersion="13D65" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6153.13"/>
     </dependencies>
     <scenes>
@@ -16,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hsF-XY-Beb">
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hsF-XY-Beb">
                                 <rect key="frame" x="0.0" y="0.0" width="391" height="446"/>
                                 <gestureRecognizers/>
                                 <state key="normal" backgroundImage="World's smallest wine glass.jpg">
@@ -29,24 +30,24 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1665 Hz" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iOS-PE-wne">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2007 Hz" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iOS-PE-wne">
                                 <rect key="frame" x="163" y="143" width="115" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="MyX-v1-aCe">
-                                <rect key="frame" x="128" y="286" width="118" height="31"/>
+                                <rect key="frame" x="69" y="287" width="233" height="31"/>
                                 <connections>
                                     <action selector="slider1action:" destination="BYZ-38-t0r" eventType="valueChanged" id="HBd-Z9-uTJ"/>
                                 </connections>
                             </slider>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FlF-Cw-RKb">
-                                <rect key="frame" x="75" y="41" width="224" height="202"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GFn-IE-8k3">
+                                <rect key="frame" x="82" y="51" width="220" height="200"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <connections>
-                                    <outletCollection property="gestureRecognizers" destination="5Hz-ai-uzU" appends="YES" id="c1e-OX-1XM"/>
+                                    <outletCollection property="gestureRecognizers" destination="lWw-Xq-O46" appends="YES" id="AzW-4O-YlI"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -57,18 +58,17 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
-                        <outlet property="gesture1" destination="5Hz-ai-uzU" id="0HI-uL-NXW"/>
-                        <outlet property="glass1" destination="hsF-XY-Beb" id="uAd-qO-Zpl"/>
+                        <outlet property="gesture1" destination="lWw-Xq-O46" id="4Ap-iJ-dB4"/>
+                        <outlet property="glass1" destination="hsF-XY-Beb" id="0qN-US-Th0"/>
                         <outlet property="hz1" destination="iOS-PE-wne" id="zU1-6Z-i72"/>
                         <outlet property="ml1" destination="Zbg-P1-35c" id="dW3-Jz-7Zq"/>
                         <outlet property="slider1" destination="MyX-v1-aCe" id="XZq-Pg-Zuu"/>
-                        <outlet property="view" destination="FlF-Cw-RKb" id="dcb-a5-CcR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <panGestureRecognizer minimumNumberOfTouches="1" id="5Hz-ai-uzU">
+                <panGestureRecognizer minimumNumberOfTouches="1" id="lWw-Xq-O46">
                     <connections>
-                        <action selector="gesture1action:" destination="BYZ-38-t0r" id="0vQ-ui-5X8"/>
+                        <action selector="gesture1action:" destination="BYZ-38-t0r" id="CGJ-mO-a0w"/>
                     </connections>
                 </panGestureRecognizer>
             </objects>
